<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.lista.DetalleListaFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/ap_tly_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ap_tabItem_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_str_infoTitulo" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ap_tabItem_comparativa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_str_comparativaTitulo" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ap_tabInfo_evolucion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_str_evolucionTitulo" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/ap_vp_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ap_tly_tabLayout"
        android:layout_marginTop="40dp"
        android:padding="8dp" />

</FrameLayout>